--- a/css/style.css
+++ b/css/style.css
@@ -57,16 +57,50 @@ body{
 .heading-primary{
     color: #fff;
     text-transform: uppercase;
+
+    backface-visibility: hidden; /*Ill-effects after animations are done make it look bad.So it is hidden*/
 }
 .heading-primary-main{
     display: block; /*span elements are inlilne elements by default and we make them block because*/
     font-size: 60px;/*they take the full 100% of the width*/
     font-weight: 400;
     letter-spacing: 35px;
+
+    animation-name: movefromLeft;
+    animation-duration: 2s;
+    animation-timing-function: ease-out;
 }
 .heading-primary-sub{
     display: block;
     font-size: 25px;
     font-weight: 700;
     letter-spacing: 14.6px; /*Space out the letters to make them equal to the main heading*/
+    animation-name: movefromRight 2s ease-out;
+}
+
+/***Animations***/
+@keyframes movefromLeft{
+    0%{
+        opacity: 0;
+        transform: translateX(-100px); /*To let it stay 100pixels backward*/
+    }
+    80%{
+        transform: translateX(10px); /*This would mean that after 80% there is additional 10px towards right.
+                                        this would mean that after 100% it would add an effect of going forward and coming back*/
+    }
+    100%{
+        transform: translateX(0); /*To stay in the initial position after 100% animation*/
+    }
+}
+@keyframes movefromRight{
+    0%{
+        opacity: 0;
+        transform: translateX(100px); 
+    }
+    80%{
+        transform: translateX(-10px);
+    }
+    100%{
+        transform: translateX(0); 
+    }
 }
