--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -1,12 +1,11 @@
-/*
-COLORS:
 
-Light green: #7ed56f
-Medium green: #55c57a
-Dark green: #28b485
+//Sass variables
+$color-primary: #55c57a;
+$color-primary-light: #7ed56f;
+$color-primary-dark: #28b485;
 
-*/
-*{  /*Universal Setting*/
+/*Universal Setting*/
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -31,8 +30,8 @@ body{
     height: 95vh;
     background-image: linear-gradient(
         to right bottom, /*This is to specify the direction of the gradient*/
-        rgba(127, 214, 112, 0.8),/*The last parameter is the opacity of the gradient.It is lowered to show the background image also*/
-        rgb(40, 180, 133, 0.8)), 
+        rgba($color-primary-light, 0.8),/*The last parameter is the opacity of the gradient.It is lowered to show the background image also*/
+        rgba($color-primary-dark, 0.8)), 
         url(../img/hero.jpg);
     background-size: cover;
     background-position: top; /*Top stays the same when the size is changed*/
