--- a/SASS/pages/_home.scss
+++ b/SASS/pages/_home.scss
@@ -1,4 +1,5 @@
 .section-about{
-    background-color: $color-grey-light;
+    background-color: $color-grey-light-1;
     padding: 25rem 0;
+    margin-top: -20vh; //vh is 95 and our clip is 75 so the differnce is 20 extra to top
 } 
