--- a/SASS/base/_typography.scss
+++ b/SASS/base/_typography.scss
@@ -1,7 +1,7 @@
 body {
     font-family: "Lato", sans-serif;
     font-weight: 400;
-    font-size: 1.6rem;
+    font-size: $default-font-size;
     line-height: 1.7;
     $color-grey-dark: #777;
     padding: 3rem; /*Includes the white padding around the whole body on all 4 sides*/
@@ -52,13 +52,13 @@ body {
 }
 
 .heading-tertiary{
-    font-size: 1.6rem;
+    font-size: $default-font-size;
     font-weight: 700;
     text-transform: uppercase;
 }
 
 .paragraph{
-    font-size: 1.6rem;
+    font-size: $default-font-size;
 
     &:not(:last-child){
         margin-bottom: 3rem ;
