--- a/SASS/components/_button.scss
+++ b/SASS/components/_button.scss
@@ -54,3 +54,27 @@
 
 }
 }
+
+.btn-text{
+    &:link, &:visited{
+        font-size: 1.6rem;
+        color: $color-primary;
+        display: inline-block;
+        text-decoration: none;
+        border-bottom: 1px solid $color-primary;
+        padding: 3px;
+        transition: all .2s;
+    }
+
+    &:hover{
+        background-color: $color-primary;
+        color: $color-white;
+        box-shadow: 0 1rem 2rem rgba($color-black, .15);
+        transform: translateY(-2px); //to move the button 2px above while hovering
+    }
+
+    &:active{
+        box-shadow: 0 .5rem 2rem rgba($color-black, .15);
+        transform: translateY(0); //to move the button 2px above while hovering
+    }
+}
