--- a/CSS/style.css
+++ b/CSS/style.css
@@ -213,11 +213,17 @@ body {
   padding: 2.5rem;
   text-align: center;
   border-radius: 3px;
-  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+  transition: transform .3s; }
   .feature-box__icon {
-    font-size: 6rem; }
-  .feature-box__text {
-    font-size: 1.5rem; }
+    font-size: 7rem;
+    margin-bottom: .5rem;
+    display: inline-block;
+    background-image: linear-gradient(to right, #7ed56f, #28b485);
+    -webkit-background-clip: text;
+    color: transparent; }
+  .feature-box:hover {
+    transform: translateY(-1.2rem) translateY(1.2rem) scale(1.1); }
 
 .header {
   height: 95vh;
@@ -282,9 +288,18 @@ body {
   margin-top: -20vh; }
 
 .section-features {
+  display: block;
   padding: 20rem 0;
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/nat-4.jpg);
-  background-size: cover; }
+  background-size: cover;
+  margin-top: -11rem;
+  transform: skewY(-5.5deg); }
+  .section-features > * {
+    transform: skewY(5.5deg); }
+
+.section-tours {
+  background-color: #f7f7f7;
+  padding: 20rem 0 50rem 0; }
 
 /*Universal Setting are going udner base settings*/
 /**HEADER has gone to layout and its heading properties have gone to the typography**/
