--- a/SASS/pages/_home.scss
+++ b/SASS/pages/_home.scss
@@ -5,11 +5,24 @@
 } 
 
 .section-features{
+    display: block;
     padding: 20rem 0;
     background-image: linear-gradient(
-        to right bottom, /*This is to specify the direction of the gradient*/
-        rgba($color-primary-light, 0.8),/*The last parameter is the opacity of the gradient.It is lowered to show the background image also*/
-        rgba($color-primary-dark, 0.8)), 
-        url(../img/nat-4.jpg);
-        background-size: cover;
+    to right bottom, /*This is to specify the direction of the gradient*/
+    rgba($color-primary-light, 0.8),/*The last parameter is the opacity of the gradient.It is lowered to show the background image also*/
+    rgba($color-primary-dark, 0.8)), 
+    url(../img/nat-4.jpg);
+    background-size: cover;
+    margin-top: -11rem;
+    transform: skewY(-5.5deg);
+
+    & > *{ //Selects everything of the direct children.so "row" is the direct child//
+        transform: skewY(5.5deg); //selects the direct child element which is row since it is the next child
+
+    }
+}
+
+.section-tours{
+    background-color: $color-grey-light-1;
+    padding: 20rem 0 50rem 0;
 }
