--- a/CSS/style.css
+++ b/CSS/style.css
@@ -225,6 +225,10 @@ body {
   .feature-box:hover {
     transform: translateY(-1.2rem) translateY(1.2rem) scale(1.1); }
 
+.card {
+  background-color: orangered;
+  height: 50rem; }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
