--- a/SASS/components/card.scss
+++ b/SASS/components/card.scss
@@ -1,21 +1,22 @@
 .card{
+
+    //FUNCTIONALITY
     perspective: 150rem; //less number more dramatic.so choose high number
     -moz-perspective: 150rem;//for firefox
-    height: 50rem; //height collapses
+    height: 52rem; //height collapses
     position: relative;
     
     &__side{ //this is the default side of the card//
-        color: white;
-        font-size: 2rem;
 
-        height: 50rem;
+        height: 52rem;
         transition: all .8s ease;
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         backface-visibility: hidden;
-        border-radius: 3px;
+        border-radius: 1rem;
+        overflow: hidden; //image in card is overlapping the parent element and the corners are not rounded in the card
         box-shadow: 0 1.5rem 4rem rgba( $color-black, .15);
 
         &--front{
@@ -24,20 +25,134 @@
         }
 
         &--back{
-            background-color: cyan;
+            // background-color: cyan;
             transform: rotateY(180deg);
 
             &--1{
-                background-image: linear-gradient( to right bottom, $color-secondary-light, $color-secondary-dark );   ;
+                background-image: linear-gradient( to right bottom, $color-secondary-light, $color-secondary-dark );   
+            }
+
+            &--2{
+                background-image: linear-gradient( to right bottom, $color-primary-light, $color-primary-dark );   
+            }
+
+            &--3{
+                background-image: linear-gradient( to right bottom, $color-tertiary-light, $color-tertiary-dark );   
             }
         }
     }
 
     &:hover &__side--front{ //on hover the card side will be transformed .card:hover .card__side//
-        transform: rotateY(180deg);
+        transform: rotateY(-180deg); //negative sign because the card is rotating in the other direction
     }
 
     &:hover &__side--back{ //on hover the card side will be transformed .card:hover .card__side//
         transform: rotateY(0);
+    }
+
+    //FRONT SIDE STYLING
+    &__picture
+    {
+        background-size: cover;
+        height:23rem;
+        background-blend-mode: screen; //to blend the image and the gradient
+        --webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100% );
+        clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100% );      
+
+        &--1{
+            background-image: linear-gradient( to right bottom, $color-secondary-light, $color-secondary-dark ), url(../img/nat-5.jpg); //address wrt to main css file since it will be compiled in css and from there it takes the file
+        }
+
+        &--2{
+            background-image: linear-gradient( to right bottom, $color-primary-light, $color-primary-dark ),url(../img/nat-6.jpg); //address wrt to main css file since it will be compiled in css and from there it takes the file
+        }
+
+        &--3{
+            background-image: linear-gradient( to right bottom, $color-tertiary-light, $color-tertiary-dark ),url(../img/nat-7.jpg); //address wrt to main css file since it will be compiled in css and from there it takes the file
+        }
+    }
+    
+
+    &__heading{
+        font-size: 2.8rem;
+        font-weight: 400;
+        text-transform: uppercase;
+        text-align: right;
+        color: $color-white;
+        position: absolute;
+        top: 12rem;
+        right: 2rem;
+        width: 70%;
+
+
+    }
+
+    &__heading--span{
+        padding: 1rem 1.5rem;
+        -webkit-box-decoration-break: clone; //aligning the span elements to treat them as separate elements
+        box-decoration-break: clone;
+
+        &--1{
+            background-image: linear-gradient( to right bottom, 
+            rgba($color-secondary-light, .85),
+            rgba($color-secondary-dark, .85)); 
+        }
+
+        &--2{
+            background-image: linear-gradient( to right bottom, 
+            rgba($color-primary-light, .85),
+            rgba($color-primary-dark, .85)); 
+        }
+
+        &--3{
+            background-image: linear-gradient( to right bottom, 
+            rgba($color-tertiary-light, .85),
+            rgba($color-tertiary-dark, .85)); 
+        }
+    }
+
+    &__details{
+        padding: 3rem;
+        
+        ul{
+            list-style: none;
+            width: 80%;
+            margin: 0 auto ; //centering the element
+            text-transform: capitalize;
+
+            li{
+                text-align: center;
+                font-size: 1.5rem;
+                padding: 1rem;
+
+                &:not(:last-child){
+                    border-bottom: 2px solid $color-grey-light-2;
+                }
+            }
+        }
+    }
+    &__cta{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 90%;
+        text-align: center;
+    }
+    &__price-box{
+        text-align: center;
+        color: $color-white;
+        margin-bottom: 8rem ;
+    }
+
+    &__price-only{
+        font-size: 2rem;
+        text-transform: uppercase;
+        margin: 2rem 0;
+    }
+
+    &__price-value{
+        font-size: 6rem;
+        font-weight: 300;
     }
 }
