--- a/SASS/pages/_home.scss
+++ b/SASS/pages/_home.scss
@@ -23,6 +23,7 @@
 }
 
 .section-tours{
+    // transform: skewY(-5.5deg);
     background-color: $color-grey-light-1;
-    padding: 20rem 0 50rem 0;
+    padding: 20rem 0 15rem 0;
 }
