--- a/CSS/style.css
+++ b/CSS/style.css
@@ -336,15 +336,13 @@ body {
 .story {
   width: 75%;
   margin: 0 auto;
-  box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
-  background-color: #fff;
+  box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.2);
+  background-color: rgba(255, 255, 255, 0.6);
   border-radius: 3px;
   padding: 6rem;
   padding-left: 9rem;
   font-size: 1.6rem;
   transform: skewX(-12deg); }
-  .story > * {
-    transform: skewX(-12deg); }
   .story__shape {
     width: 15rem;
     height: 15rem;
@@ -353,11 +351,50 @@ body {
     shape-outside: circle(50% at 50% 50%);
     -webkit-clip-path: circle(50% at 50% 50%);
     clip-path: circle(50% at 50% 50%);
-    transform: translateX(-3rem) skewX(12deg); }
+    transform: translateX(-3rem) skewX(12deg);
+    position: relative; }
   .story__image {
-    height: 100%; }
+    height: 100%;
+    transform: translateX(-4rem) scale(1.4);
+    backface-visibility: hidden;
+    transition: all .5s; }
   .story__text {
     transform: skewX(12deg); }
+  .story__caption {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 20%);
+    margin: 0 auto;
+    color: #fff;
+    text-transform: uppercase;
+    text-decoration: solid;
+    font-size: 1.7rem;
+    text-align: center;
+    opacity: 0;
+    transition: all .5s;
+    backface-visibility: hidden; }
+  .story:hover .story__caption {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+    backface-visibility: hidden; }
+  .story:hover .story__image {
+    transform: translateX(-4rem) scale(1);
+    backface-visibility: hidden;
+    filter: blur(3px) brightness(80%); }
+
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  opacity: .15; }
+  .bg-video__content {
+    height: 100%;
+    width: 100%;
+    object-fit: cover; }
 
 .header {
   height: 95vh;
@@ -435,6 +472,13 @@ body {
 .section-tours {
   background-color: #f7f7f7;
   padding: 20rem 0 15rem 0; }
+
+.section-stories {
+  transform: skewY(-5.5deg);
+  padding: 15rem 0;
+  position: relative; }
+  .section-stories > * {
+    transform: skewY(5.5deg); }
 
 /*Universal Setting are going udner base settings*/
 /**HEADER has gone to layout and its heading properties have gone to the typography**/
