--- a/SASS/components/story.scss
+++ b/SASS/components/story.scss
@@ -1,17 +1,13 @@
 .story{
     width: 75%;
     margin: 0 auto;
-    box-shadow: 0 3rem 6rem rgba($color-black, .1);
-    background-color: $color-white;
+    box-shadow: 0 3rem 6rem rgba($color-black, .2);
+    background-color: rgba($color-white, .6);
     border-radius: 3px;
     padding: 6rem;
     padding-left: 9rem;
     font-size: $default-font-size;
-    transform: skewX(-12deg);
-
-    & > *{
-        transform: skewX(-12deg);
-    }
+    transform: skewX(-12deg); //rotate the review card 
 
     &__shape{
         width: 15rem;
@@ -19,19 +15,54 @@
         float: left;
         -webkit-shape-outside:circle( 50% at 50% 50%);         
         shape-outside: circle( 50% at 50% 50%);
-        -webkit-clip-path:circle( 50% at 50% 50%);         
+        -webkit-clip-path: circle( 50% at 50% 50%);         
         clip-path:circle( 50% at 50% 50%);
-        transform: translateX(-3rem) skewX(12deg);
-        
+        transform: translateX(-3rem) skewX(12deg); //undone the skew for all elements
+        position: relative;
     
     }
 
     &__image{
         height: 100%;
+        transform: translateX(-4rem) scale(1.4);
+        backface-visibility: hidden;
+        transition: all .5s;
+        
     }
 
     &__text{
         transform: skewX(12deg);
+
+    }
+
+    &__caption{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, 20%);
+        margin: 0 auto;
+        color: $color-white;
+        text-transform: uppercase;
+        text-decoration:solid;
+        font-size: 1.7rem;
+        text-align: center;
+        opacity: 0;
+        transition: all .5s;
+        backface-visibility: hidden;
+    }
+
+    &:hover &__caption{
+        opacity: 1;
+        transform: translate(-50%, -50%);
+        backface-visibility: hidden;
+
+    }
+
+    &:hover &__image{
+        transform: translateX(-4rem) scale(1);
+        backface-visibility: hidden;
+        filter: blur(3px) brightness(80%);
+
 
     }
 }
