--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -12,6 +12,7 @@
 @import "components/feature-box"; 
 @import "components/card";
 @import "components/story";
+@import "components/_bg-video";
 
 @import "layout/header";
 @import "layout/grid";
