--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -13,6 +13,7 @@
 @import "components/card";
 @import "components/story";
 @import "components/_bg-video";
+@import "components/_form";
 
 @import "layout/header";
 @import "layout/grid";
