--- a/CSS/style.css
+++ b/CSS/style.css
@@ -534,6 +534,46 @@ body {
   .row .col-3-of-4 {
     width: calc( 3*((100% - 3 * 6rem ) /4 ) + 2* 6rem); }
 
+.footer {
+  background-color: #333;
+  padding: 10rem 0;
+  font-size: 1.4rem; }
+  .footer__logo-box {
+    text-align: center;
+    margin-bottom: 8rem; }
+  .footer__logo {
+    width: 15rem;
+    height: auto; }
+  .footer__navigation {
+    border-top: 1px solid #eee;
+    display: inline-block; }
+  .footer__list {
+    list-style: none; }
+  .footer__items {
+    display: inline-block !important;
+    padding-top: 2rem; }
+    .footer__items:not(:last-child) {
+      margin-right: 1.5rem; }
+  .footer__link:link, .footer__link:visited {
+    background-color: #333;
+    color: #f7f7f7;
+    text-decoration: none;
+    text-transform: uppercase;
+    display: inline-block;
+    transition: all .2s; }
+  .footer__link:hover, .footer__link:active {
+    color: #55c57a;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
+    transform: rotate(5deg) scale(1.3); }
+  .footer__copyright {
+    padding-top: 2rem;
+    border-top: 1px solid #eee;
+    color: #f7f7f7;
+    width: 80%;
+    float: right;
+    text-align: center;
+    font-size: 2rem; }
+
 .section-about {
   background-color: #f7f7f7;
   padding: 25rem 0;
