--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -15,8 +15,10 @@
 @import "components/_bg-video";
 @import "components/_form";
 
-@import "layout/header";
-@import "layout/grid";
+@import "layout/_header";
+@import "layout/_grid";
+@import "layout/_footer";
+
 
 @import "pages/home";
 
