--- a/SASS/layout/_footer.scss
+++ b/SASS/layout/_footer.scss
@@ -58,7 +58,9 @@
         width: 80%;
         float: right;
         text-align: center;
-        font-size: 2rem;
+        background-color: $color-grey-dark-3;
+        font-size: 1.4rem;
+        text-transform: uppercase;
 
     }
 }
