--- a/CSS/style.css
+++ b/CSS/style.css
@@ -572,7 +572,9 @@ body {
     width: 80%;
     float: right;
     text-align: center;
-    font-size: 2rem; }
+    background-color: #333;
+    font-size: 1.4rem;
+    text-transform: uppercase; }
 
 .section-about {
   background-color: #f7f7f7;
