starting with nav menu

--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -18,6 +18,7 @@
 @import "layout/_header";
 @import "layout/_grid";
 @import "layout/_footer";
+@import "layout/_navigation";
 
 
 @import "pages/home";
